force-app/main/default/objects/GoogleDriveCreds__c/GoogleDriveCreds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google Drive Creds</label>
</CustomObject>