force-app/main/default/objects/GoogleDriveCreds__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <type>TextArea</type>
</CustomField>