force-app/main/default/objects/GoogleDriveCreds__c/fields/MainFolderId__c.field-meta.xml
<CustomField>
    <fullName>MainFolderId__c</fullName>
    <label>Main Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>